// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fetch and filter csv data 1`] = `
Array [
  Object {
    "values": Array [
      Object {
        "a": 3,
        "b": 4,
      },
      Object {
        "a": 4,
        "b": 2,
      },
      Object {
        "a": 5,
        "b": 0,
      },
    ],
  },
]
`;

exports[`should fetch, filter, map, and sort csv data 1`] = `
Array [
  Object {
    "values": Array [
      Object {
        "a": 4,
        "b": 2,
        "computed": 6,
      },
      Object {
        "a": 3,
        "b": 4,
        "computed": 7,
      },
      Object {
        "a": 2,
        "b": 6,
        "computed": 8,
      },
      Object {
        "a": 1,
        "b": 8,
        "computed": 9,
      },
      Object {
        "a": 0,
        "b": 10,
        "computed": 10,
      },
    ],
  },
]
`;
